unpackaged/objects/Production__c.object
<CustomObject>
    <description>Production can e movies, tv shows or games in out app.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the production</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fun_Facts__c</fullName>
        <label>Fun Facts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMDb_URL__c</fullName>
        <description>Web address for IMDb production</description>
        <label>IMDb URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Episodes__c</fullName>
        <label>Number of Episodes</label>
        <summaryForeignKey>Episode__c.TV_Show__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year that production was released</description>
        <inlineHelpText>The calendar year that this production was originally released</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>